# lark-cli-lig

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: mcp-gateway-design.md  permission-rollout-plan.md
src/lark_cli_lig/: __init__.py  api.py  auth.py  config.py  logging_config.py  main.py  policy.py  utils.py
src/lark_cli_lig/commands/: approval.py  auth_cmd.py  chats.py  contacts.py  download.py  im.py  raw.py
