[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-cli-lig"
version = "1.0.0"
description = "LIG Nutrition's Lark CLI - messaging, approvals, contacts, bitable, and raw API access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Richard Liu (Haoyu Liu)", email = "haoyu@americanbestlife.com"}
]
keywords = ["lark", "feishu", "cli", "approval", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "pdf2image>=1.16",
]

[project.urls]
Homepage = "https://github.com/RichardLiu-ABL/lark-cli-lig"

[project.scripts]
lark-lig = "lark_cli_lig.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
